Bug 1255054 - Try to do a repaint of the unsuppressed displayport after displayport suppression has ended. r=BenWa

MozReview-Commit-ID: 7JN4PHEEjUT